fix the pictur and truncate size

--- a/lazy/article/static/article/css/main.css
+++ b/lazy/article/static/article/css/main.css
@@ -18,6 +18,16 @@
 		vertical-align: baseline;
 	}
 
+    header {
+		margin: -6em 0 -4em 0; /* */
+		padding: 0 0 0 0;
+		border: 0;
+		font-size: 100%;
+		font: inherit;
+		vertical-align: baseline;
+	}
+
+
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
 	}
